--- a/config/gtk-2.0/gtkfilechooser.ini
+++ b/config/gtk-2.0/gtkfilechooser.ini
@@ -1,11 +1,11 @@
 [Filechooser Settings]
-LocationMode=filename-entry
+LocationMode=path-bar
 ShowHidden=false
 ShowSizeColumn=true
-GeometryX=914
-GeometryY=451
-GeometryWidth=780
-GeometryHeight=585
+GeometryX=-1
+GeometryY=-1
+GeometryWidth=-1
+GeometryHeight=-1
 SortColumn=name
 SortOrder=ascending
 StartupMode=recent
