--- a/config/xfce4/panel/launcher-9/14794198341.desktop
+++ b/config/xfce4/panel/launcher-9/14794198341.desktop
@@ -1,12 +1,13 @@
 [Desktop Entry]
 Version=1.0
 Type=Application
-Exec=exo-open --launch TerminalEmulator
+Exec=urxvt
 Icon=utilities-terminal
 StartupNotify=true
 Terminal=false
 Categories=Utility;X-XFCE;X-Xfce-Toplevel;
 OnlyShowIn=XFCE;
-Name=Terminal Emulator
+Name=urxvt
 Comment=Use the command line
 X-XFCE-Source=file:///usr/share/applications/exo-terminal-emulator.desktop
+Path=
