Working more on .gitignore; removed vim-pack edgedb

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
-
 # machine-specific settings files
 :.bashrc_local
 
 # VIM temporary & swap files
-:/.vim/temp/
+:.vim/temp/
 :[._]*.sw[a-p]
 
 # VIM network r/w history
